test_suite5/ALAN/test_suite/alan-2022-examples/failing/002880_mutation.alan
source dy begin if < 87 then relax end end
